prepare to preview
