# docs/swagger.json
@@ -53,19 +53,19 @@
             "name": "perPage",
             "required": false,
             "schema": {
-              "type": "integer",
-              "example": 10
-            }
+              "type": "integer"
+            },
+            "example": 10
           },
           {
             "in": "query",
             "name": "sortBy",
             "required": false,
             "schema": {
-              "type": "string",
-              "example": "age"
+              "type": "string"
             },
-            "description": "All contacts's fields can be mentioned. Default value - _id"
+            "example": "age",
+            "description": "All contact fields can be used. Default is _id."
           },
           {
             "in": "query",
@@ -76,59 +76,70 @@
               "enum": [
                 "asc",
                 "desc"
-              ],
-              "example": "asc"
-            }
+              ]
+            },
+            "example": "asc"
           },
           {
             "in": "query",
             "name": "name",
             "required": false,
             "schema": {
-              "type": "string",
-              "description": "Student name",
-              "example": "John Doe"
-            }
+              "type": "string"
+            },
+            "description": "Contact name",
+            "example": "John Doe"
           },
           {
             "in": "query",
             "name": "phoneNumber",
             "required": false,
             "schema": {
-              "type": "integer",
-              "description": "Phone number of contact",
-              "example": 6666666666
-            }
+              "type": "integer"
+            },
+            "description": "Phone number of contact",
+            "example": 6666666666
           },
           {
             "in": "query",
             "name": "isFavourite",
             "required": false,
             "schema": {
-              "type": "boolean",
-              "description": "Favorite or not",
-              "example": false
-            }
+              "type": "boolean"
+            },
+            "description": "Whether contact is marked as favourite",
+            "example": false
           },
           {
             "in": "query",
             "name": "contactType",
             "required": false,
             "schema": {
-              "type": "string",
-              "description": "type of contact",
-              "example": "work| home| personal"
-            }
+              "type": "string"
+            },
+            "description": "Type of contact",
+            "example": "work"
           },
           {
             "in": "query",
             "name": "userId",
             "required": false,
             "schema": {
-              "type": "object",
-              "description": "ID of the user who owns the contact",
-              "example": "67f2b37d070930bb1b7df45c"
-            }
+              "type": "string"
+            },
+            "description": "ID of the user who owns the contact",
+            "example": "67f2b37d070930bb1b7df45c"
+          },
+          {
+            "in": "query",
+            "name": "photo",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "format": "binary"
+            },
+            "description": "Contact photo",
+            "example": null
           }
         ],
         "responses": {
@@ -203,9 +214,6 @@
           },
           "401": {
             "$ref": "#/components/responses/401"
-          },
-          "500": {
-            "$ref": "#/components/responses/500"
           }
         }
       },
@@ -237,6 +245,11 @@
                     "type": "string",
                     "example": "John Doe"
                   },
+                  "email": {
+                    "type": "string",
+                    "description": "Contact email",
+                    "example": "antonkulackov@gmail.com"
+                  },
                   "photo": {
                     "type": "string",
                     "format": "binary",
@@ -251,7 +264,7 @@
                   "isFavourite": {
                     "type": "boolean",
                     "description": "Favorite or not",
-                    "example": true
+                    "example": false
                   },
                   "contactType": {
                     "type": "string",
@@ -285,62 +298,7 @@
                       "example": "Successfully created a student!"
                     },
                     "data": {
-                      "type": "object",
-                      "required": [
-                        "name",
-                        "phoneNumber",
-                        "contactType"
-                      ],
-                      "properties": {
-                        "_id": {
-                          "type": "string",
-                          "description": "Contact id",
-                          "example": "67f2ac630248dda60bc9df22"
-                        },
-                        "name": {
-                          "type": "string",
-                          "description": "Contact name",
-                          "example": "John Doe"
-                        },
-                        "phoneNumber": {
-                          "type": "integer",
-                          "description": "Phone number of contact",
-                          "example": 6666666666
-                        },
-                        "isFavourite": {
-                          "type": "boolean",
-                          "description": "Favorite or not",
-                          "example": "true| false"
-                        },
-                        "contactType": {
-                          "type": "string",
-                          "description": "type of contact",
-                          "example": "home"
-                        },
-                        "userId": {
-                          "type": "object",
-                          "description": "ID of the user who owns the contact",
-                          "example": "67f2b37d070930bb1b7df45c"
-                        },
-                        "photo": {
-                          "type": "string",
-                          "format": "binary",
-                          "description": "Contact photo",
-                          "example": null
-                        },
-                        "createdAt": {
-                          "type": "string",
-                          "format": "date-time",
-                          "description": "Creation timestamp",
-                          "example": "2024-04-07T12:34:56.789Z"
-                        },
-                        "updatedAt": {
-                          "type": "string",
-                          "format": "date-time",
-                          "description": "Last update timestamp",
-                          "example": "2024-04-07T12:34:56.789Z"
-                        }
-                      }
+                      "$ref": "#/components/schemas/contact"
                     }
                   }
                 }
@@ -349,9 +307,6 @@
           },
           "401": {
             "$ref": "#/components/responses/401"
-          },
-          "500": {
-            "$ref": "#/components/responses/500"
           }
         }
       }
@@ -402,6 +357,7 @@
                       "example": "Contact received successfully"
                     },
                     "data": {
+                      "type": "object",
                       "$ref": "#/components/schemas/contact"
                     }
                   }
@@ -409,35 +365,8 @@
               }
             }
           },
-          "401": {
-            "$ref": "#/components/responses/401"
-          },
           "404": {
-            "description": "Contact not found",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "required": [
-                    "status",
-                    "message"
-                  ],
-                  "properties": {
-                    "status": {
-                      "type": "integer",
-                      "example": 404
-                    },
-                    "message": {
-                      "type": "string",
-                      "example": "Contact not found"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "500": {
-            "$ref": "#/components/responses/500"
+            "$ref": "#/components/responses/404"
           }
         }
       },
@@ -474,6 +403,11 @@
                     "description": "Contact's name",
                     "example": "John Doe"
                   },
+                  "email": {
+                    "type": "string",
+                    "description": "Contact email",
+                    "example": "antonkulackov@gmail.com"
+                  },
                   "photo": {
                     "type": "string",
                     "format": "binary",
@@ -507,6 +441,11 @@
               "application/json": {
                 "schema": {
                   "type": "object",
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -517,44 +456,7 @@
                       "example": "Contact updated successfully"
                     },
                     "data": {
-                      "type": "object",
-                      "properties": {
-                        "_id": {
-                          "type": "string",
-                          "description": "Contact ID",
-                          "example": "67f2ac630248dda60bc9df22"
-                        },
-                        "name": {
-                          "type": "string",
-                          "description": "Contact name",
-                          "example": "John Doe"
-                        },
-                        "phoneNumber": {
-                          "type": "integer",
-                          "description": "Phone number of contact",
-                          "example": 6666666666
-                        },
-                        "isFavourite": {
-                          "type": "boolean",
-                          "description": "Favorite or not",
-                          "example": false
-                        },
-                        "contactType": {
-                          "type": "string",
-                          "description": "Type of contact",
-                          "enum": [
-                            "work",
-                            "home",
-                            "personal"
-                          ],
-                          "example": "work"
-                        },
-                        "userId": {
-                          "type": "string",
-                          "description": "ID of the user who owns the contact",
-                          "example": "67f2b37d070930bb1b7df45c"
-                        }
-                      }
+                      "$ref": "#/components/schemas/contact"
                     }
                   }
                 }
@@ -566,12 +468,6 @@
           },
           "401": {
             "$ref": "#/components/responses/401"
-          },
-          "404": {
-            "$ref": "#/components/responses/404"
-          },
-          "500": {
-            "$ref": "#/components/responses/500"
           }
         }
       },
@@ -602,11 +498,8 @@
           "204": {
             "description": "Contact successfully deleted"
           },
-          "400": {
-            "$ref": "#/components/responses/400"
-          },
-          "500": {
-            "$ref": "#/components/responses/500"
+          "404": {
+            "$ref": "#/components/responses/404"
           }
         }
       }
@@ -622,16 +515,21 @@
     "schemas": {
       "contact": {
         "type": "object",
-        "required": [
-          "name",
-          "phoneNumber",
-          "contactType"
-        ],
         "properties": {
+          "_id": {
+            "type": "string",
+            "description": "Contact id",
+            "example": "67f2ac630248dda60bc9df22"
+          },
           "name": {
             "type": "string",
             "description": "Contact name",
             "example": "John Doe"
+          },
+          "email": {
+            "type": "string",
+            "description": "Contact email",
+            "example": "antonkulackov@gmail.com"
           },
           "phoneNumber": {
             "type": "integer",
@@ -641,18 +539,28 @@
           "isFavourite": {
             "type": "boolean",
             "description": "Favorite or not",
-            "example": "true| false"
+            "example": false
           },
           "contactType": {
             "type": "string",
             "description": "type of contact",
+            "enum": [
+              "work",
+              "home",
+              "personal"
+            ],
             "example": "home"
+          },
+          "userId": {
+            "type": "object",
+            "description": "ID of the user who owns the contact",
+            "example": "67f2b37d070930bb1b7df45c"
           },
           "photo": {
             "type": "string",
-            "description": "userPhoto",
-            "example": "https://res.cloudinary.com/dvpu3wlxo/image/upload/v1743711699/n8k5vhom…",
-            "default": null
+            "format": "binary",
+            "description": "Contact photo",
+            "example": null
           },
           "createdAt": {
             "type": "string",
@@ -749,43 +657,6 @@
                 "error": {
                   "type": "string",
                   "example": "Not Found"
-                }
-              }
-            }
-          }
-        }
-      },
-      "500": {
-        "description": "Unauthorized error",
-        "content": {
-          "application/json": {
-            "schema": {
-              "type": "object",
-              "required": [
-                "status",
-                "message",
-                "data"
-              ],
-              "properties": {
-                "status": {
-                  "type": "integer",
-                  "example": 500
-                },
-                "message": {
-                  "type": "string",
-                  "example": "UnauthorizedError"
-                },
-                "data": {
-                  "type": "object",
-                  "required": [
-                    "message"
-                  ],
-                  "properties": {
-                    "message": {
-                      "type": "string",
-                      "example": "Server error"
-                    }
-                  }
                 }
               }
             }
